fix(week7): fix some error
