# week7/server-code/openapi_server/models/api_error.py
@@ -6,20 +6,20 @@ from openapi_server.models.base_model import Model
 from openapi_server import util
 
 
-class ErrorError(Model):
+class ApiError(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, code=None, message=None, details=None):  # noqa: E501
-        """ErrorError - a model defined in OpenAPI
+        """ApiError - a model defined in OpenAPI
 
-        :param code: The code of this ErrorError.  # noqa: E501
+        :param code: The code of this ApiError.  # noqa: E501
         :type code: int
-        :param message: The message of this ErrorError.  # noqa: E501
+        :param message: The message of this ApiError.  # noqa: E501
         :type message: str
-        :param details: The details of this ErrorError.  # noqa: E501
+        :param details: The details of this ApiError.  # noqa: E501
         :type details: str
         """
         self.openapi_types = {
@@ -39,32 +39,32 @@ class ErrorError(Model):
         self._details = details
 
     @classmethod
-    def from_dict(cls, dikt) -> 'ErrorError':
+    def from_dict(cls, dikt) -> 'ApiError':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The Error_error of this ErrorError.  # noqa: E501
-        :rtype: ErrorError
+        :return: The ApiError of this ApiError.  # noqa: E501
+        :rtype: ApiError
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def code(self) -> int:
-        """Gets the code of this ErrorError.
+        """Gets the code of this ApiError.
 
 
-        :return: The code of this ErrorError.
+        :return: The code of this ApiError.
         :rtype: int
         """
         return self._code
 
     @code.setter
     def code(self, code: int):
-        """Sets the code of this ErrorError.
+        """Sets the code of this ApiError.
 
 
-        :param code: The code of this ErrorError.
+        :param code: The code of this ApiError.
         :type code: int
         """
         if code is None:
@@ -74,20 +74,20 @@ class ErrorError(Model):
 
     @property
     def message(self) -> str:
-        """Gets the message of this ErrorError.
+        """Gets the message of this ApiError.
 
 
-        :return: The message of this ErrorError.
+        :return: The message of this ApiError.
         :rtype: str
         """
         return self._message
 
     @message.setter
     def message(self, message: str):
-        """Sets the message of this ErrorError.
+        """Sets the message of this ApiError.
 
 
-        :param message: The message of this ErrorError.
+        :param message: The message of this ApiError.
         :type message: str
         """
         if message is None:
@@ -97,20 +97,20 @@ class ErrorError(Model):
 
     @property
     def details(self) -> str:
-        """Gets the details of this ErrorError.
+        """Gets the details of this ApiError.
 
 
-        :return: The details of this ErrorError.
+        :return: The details of this ApiError.
         :rtype: str
         """
         return self._details
 
     @details.setter
     def details(self, details: str):
-        """Sets the details of this ErrorError.
+        """Sets the details of this ApiError.
 
 
-        :param details: The details of this ErrorError.
+        :param details: The details of this ApiError.
         :type details: str
         """
 
