# week7/server-code/openapi_server/models/message_response.py
@@ -1,0 +1,63 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class MessageResponse(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, message=None):  # noqa: E501
+        """MessageResponse - a model defined in OpenAPI
+
+        :param message: The message of this MessageResponse.  # noqa: E501
+        :type message: str
+        """
+        self.openapi_types = {
+            'message': str
+        }
+
+        self.attribute_map = {
+            'message': 'message'
+        }
+
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'MessageResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The MessageResponse of this MessageResponse.  # noqa: E501
+        :rtype: MessageResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> str:
+        """Gets the message of this MessageResponse.
+
+
+        :return: The message of this MessageResponse.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """Sets the message of this MessageResponse.
+
+
+        :param message: The message of this MessageResponse.
+        :type message: str
+        """
+        if message is None:
+            raise ValueError("Invalid value for `message`, must not be `None`")  # noqa: E501
+
+        self._message = message
