# week7/server-code/openapi_server/models/product_update_request.py
@@ -1,175 +1,0 @@
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from openapi_server.models.base_model import Model
-from openapi_server import util
-
-
-class ProductUpdateRequest(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, name=None, description=None, price=None, stock=None, category=None):  # noqa: E501
-        """ProductUpdateRequest - a model defined in OpenAPI
-
-        :param name: The name of this ProductUpdateRequest.  # noqa: E501
-        :type name: str
-        :param description: The description of this ProductUpdateRequest.  # noqa: E501
-        :type description: str
-        :param price: The price of this ProductUpdateRequest.  # noqa: E501
-        :type price: float
-        :param stock: The stock of this ProductUpdateRequest.  # noqa: E501
-        :type stock: int
-        :param category: The category of this ProductUpdateRequest.  # noqa: E501
-        :type category: str
-        """
-        self.openapi_types = {
-            'name': str,
-            'description': str,
-            'price': float,
-            'stock': int,
-            'category': str
-        }
-
-        self.attribute_map = {
-            'name': 'name',
-            'description': 'description',
-            'price': 'price',
-            'stock': 'stock',
-            'category': 'category'
-        }
-
-        self._name = name
-        self._description = description
-        self._price = price
-        self._stock = stock
-        self._category = category
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'ProductUpdateRequest':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The ProductUpdateRequest of this ProductUpdateRequest.  # noqa: E501
-        :rtype: ProductUpdateRequest
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def name(self) -> str:
-        """Gets the name of this ProductUpdateRequest.
-
-
-        :return: The name of this ProductUpdateRequest.
-        :rtype: str
-        """
-        return self._name
-
-    @name.setter
-    def name(self, name: str):
-        """Sets the name of this ProductUpdateRequest.
-
-
-        :param name: The name of this ProductUpdateRequest.
-        :type name: str
-        """
-        if name is None:
-            raise ValueError("Invalid value for `name`, must not be `None`")  # noqa: E501
-
-        self._name = name
-
-    @property
-    def description(self) -> str:
-        """Gets the description of this ProductUpdateRequest.
-
-
-        :return: The description of this ProductUpdateRequest.
-        :rtype: str
-        """
-        return self._description
-
-    @description.setter
-    def description(self, description: str):
-        """Sets the description of this ProductUpdateRequest.
-
-
-        :param description: The description of this ProductUpdateRequest.
-        :type description: str
-        """
-        if description is None:
-            raise ValueError("Invalid value for `description`, must not be `None`")  # noqa: E501
-
-        self._description = description
-
-    @property
-    def price(self) -> float:
-        """Gets the price of this ProductUpdateRequest.
-
-
-        :return: The price of this ProductUpdateRequest.
-        :rtype: float
-        """
-        return self._price
-
-    @price.setter
-    def price(self, price: float):
-        """Sets the price of this ProductUpdateRequest.
-
-
-        :param price: The price of this ProductUpdateRequest.
-        :type price: float
-        """
-        if price is None:
-            raise ValueError("Invalid value for `price`, must not be `None`")  # noqa: E501
-
-        self._price = price
-
-    @property
-    def stock(self) -> int:
-        """Gets the stock of this ProductUpdateRequest.
-
-
-        :return: The stock of this ProductUpdateRequest.
-        :rtype: int
-        """
-        return self._stock
-
-    @stock.setter
-    def stock(self, stock: int):
-        """Sets the stock of this ProductUpdateRequest.
-
-
-        :param stock: The stock of this ProductUpdateRequest.
-        :type stock: int
-        """
-        if stock is None:
-            raise ValueError("Invalid value for `stock`, must not be `None`")  # noqa: E501
-
-        self._stock = stock
-
-    @property
-    def category(self) -> str:
-        """Gets the category of this ProductUpdateRequest.
-
-
-        :return: The category of this ProductUpdateRequest.
-        :rtype: str
-        """
-        return self._category
-
-    @category.setter
-    def category(self, category: str):
-        """Sets the category of this ProductUpdateRequest.
-
-
-        :param category: The category of this ProductUpdateRequest.
-        :type category: str
-        """
-        if category is None:
-            raise ValueError("Invalid value for `category`, must not be `None`")  # noqa: E501
-
-        self._category = category
