# week7/server-code/openapi_server/models/products_get200_response.py
@@ -1,91 +1,0 @@
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from openapi_server.models.base_model import Model
-from openapi_server.models.product_list_item import ProductListItem
-from openapi_server.models.products_get200_response_metadata import ProductsGet200ResponseMetadata
-from openapi_server import util
-
-from openapi_server.models.product_list_item import ProductListItem  # noqa: E501
-from openapi_server.models.products_get200_response_metadata import ProductsGet200ResponseMetadata  # noqa: E501
-
-class ProductsGet200Response(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, data=None, metadata=None):  # noqa: E501
-        """ProductsGet200Response - a model defined in OpenAPI
-
-        :param data: The data of this ProductsGet200Response.  # noqa: E501
-        :type data: List[ProductListItem]
-        :param metadata: The metadata of this ProductsGet200Response.  # noqa: E501
-        :type metadata: ProductsGet200ResponseMetadata
-        """
-        self.openapi_types = {
-            'data': List[ProductListItem],
-            'metadata': ProductsGet200ResponseMetadata
-        }
-
-        self.attribute_map = {
-            'data': 'data',
-            'metadata': 'metadata'
-        }
-
-        self._data = data
-        self._metadata = metadata
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'ProductsGet200Response':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The _products_get_200_response of this ProductsGet200Response.  # noqa: E501
-        :rtype: ProductsGet200Response
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def data(self) -> List[ProductListItem]:
-        """Gets the data of this ProductsGet200Response.
-
-
-        :return: The data of this ProductsGet200Response.
-        :rtype: List[ProductListItem]
-        """
-        return self._data
-
-    @data.setter
-    def data(self, data: List[ProductListItem]):
-        """Sets the data of this ProductsGet200Response.
-
-
-        :param data: The data of this ProductsGet200Response.
-        :type data: List[ProductListItem]
-        """
-
-        self._data = data
-
-    @property
-    def metadata(self) -> ProductsGet200ResponseMetadata:
-        """Gets the metadata of this ProductsGet200Response.
-
-
-        :return: The metadata of this ProductsGet200Response.
-        :rtype: ProductsGet200ResponseMetadata
-        """
-        return self._metadata
-
-    @metadata.setter
-    def metadata(self, metadata: ProductsGet200ResponseMetadata):
-        """Sets the metadata of this ProductsGet200Response.
-
-
-        :param metadata: The metadata of this ProductsGet200Response.
-        :type metadata: ProductsGet200ResponseMetadata
-        """
-
-        self._metadata = metadata
